--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sorting Visualizer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="./build/app.js"></script>
+    <script defer src="./app.js"></script>
 </head>
 <body>
 <div id="root"></div>
